--- a/frontend/src/components/PageButtons/styles.module.css
+++ b/frontend/src/components/PageButtons/styles.module.css
@@ -1,4 +1,41 @@
 .buttonContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
+  max-height: 100vh;
+  background-color: white;
+}
+
+button {
+  border-width: 1px;
+}
+
+button:active {
+  opacity: 0.8;
+}
+.But0 {
+  grid-column: 1 / -3;
+}
+
+.butEqBrack {
+  
+}
+
+.buttonR5 {
+  height: calc(80vh/5);
+}
+
+.buttonR6 {
+  height: calc(80vh/6);
+}
+
+.numberBut {
+  background-color: lightgrey;
+}
+
+.operationBut {
+  background-color: orange;
+}
+
+.optionBut {
+  background-color: grey;
 }
