--- a/frontend/src/components/PageButtons/styles.module.css
+++ b/frontend/src/components/PageButtons/styles.module.css
@@ -6,7 +6,10 @@
 }
 
 button {
-  border-width: 1px;
+  border-width: 0.2vmin;
+  font-size: 5vmin;
+  color: rgba(255, 255, 255, 0.916);
+  border-color: rgb(142, 141, 141);
 }
 
 button:active {
@@ -16,6 +19,12 @@ button:active {
   grid-column: 1 / -3;
 }
 
+
+.divPlaceholder {
+  border-width: 0.2vmin;
+  background-color: rgb(105, 104, 104);
+  border-color: rgb(142, 141, 141);
+}
 .butEqBrack {
   
 }
@@ -29,13 +38,13 @@ button:active {
 }
 
 .numberBut {
-  background-color: lightgrey;
+  background-color: rgb(149, 149, 149);
 }
 
 .operationBut {
-  background-color: orange;
+  background-color: rgba(255, 166, 0, 0.951);
 }
 
 .optionBut {
-  background-color: grey;
+  background-color: rgb(105, 104, 104);
 }
